--- a/app/partials/inventory.html
+++ b/app/partials/inventory.html
@@ -31,10 +31,10 @@
                     </div>
                     <div class="row">
                         <div class="col-xs-6">
-                            Value Each:
+                            Value:
                         </div>
                         <div class="col-xs-6">
-                             ${{inventory.showcase.value}}
+                             ${{inventory.showcase.value}} ea.
                         </div>
                     </div>
                     <!--
