--- a/app/views/map.html
+++ b/app/views/map.html
@@ -48,7 +48,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="showcase-description scroll-bars">
+                <div class="showcase-description">
                     {{showcase.description}}
                 </div>
             </div>
