--- a/app/partials/vessel.html
+++ b/app/partials/vessel.html
@@ -1,9 +1,9 @@
 <div class="game-pane vessel">
     <div class="row-4">
-        <st-inventory owner="vessel.player" action="store"></st-inventory>
+        <st-inventory owner="vessel.player" action="vessel.store"></st-inventory>
     </div>
     <div class="row-7">
-        <st-inventory owner="vessel.vessel" action="take"></st-inventory>
+        <st-inventory owner="vessel.vessel" action="vessel.take"></st-inventory>
     </div>
     <div class="row-1">
         <div class="buttons">
