--- a/assets/sass/app/_room.scss
+++ b/assets/sass/app/_room.scss
@@ -69,7 +69,7 @@ div.room {
     border-top-color: darken($brand-primary, 8%);
     border-right-color: $brand-primary;
     background-color: #000;
-    padding: 15px;
+    padding: 8px;
     position: absolute;
     top: 0;
     left: 0;
@@ -132,14 +132,15 @@ table.room-table {
         }
 
         > .btn {
-            width: 80%;
-            height: 80%;
+            width: 95%;
+            height: 95%;
             position: absolute;
             top: 0;
             right: 0;
             left: 0;
             margin: auto;
             bottom: 0;
+            padding: 0;
         }
     }
 }
