--- a/assets/sass/bootstrap/_variables.scss
+++ b/assets/sass/bootstrap/_variables.scss
@@ -710,7 +710,7 @@ $list-group-link-heading-color: #333 !default;
 //##
 
 $panel-bg:                    $body-bg !default;
-$panel-body-padding:          20px !default;
+$panel-body-padding:          15px 20px !default;
 $panel-heading-padding:       0px !default;
 $panel-footer-padding:        $panel-heading-padding !default;
 $panel-border-radius:         $border-radius-base !default;
