--- a/app/partials/inventory.html
+++ b/app/partials/inventory.html
@@ -8,7 +8,10 @@
             <div class="inventory-items" ng-if="!inventory.showcase && !inventory.showQuantitySelect">
                 <div class="row inventory-item" ng-repeat="item in inventory.owner.items track by $index" ng-click="inventory.preview(item)">
                     <div class="col-xs-10">
+                        <!--
                         <i ng-if="item.inCart && item.owner === 'npc'" class="fa fa-arrow-up"></i><i ng-if="item.inCart && !item.owner" class="fa fa-arrow-down"></i>{{item.name}}<span ng-if="item.quantity > 1"> ({{item.quantity}})</span>
+                        -->
+                        <i ng-if="item.inCart" class="fa fa-square"></i>{{item.name}}<span ng-if="item.quantity > 1"> ({{item.quantity}})</span>
                     </div>
                     <div class="col-xs-2 inventory-item-cost">{{item.value}}</div>
                 </div>
