--- a/assets/sass/bootstrap/_variables.scss
+++ b/assets/sass/bootstrap/_variables.scss
@@ -27,7 +27,7 @@ $brand-danger:          #d9534f !default;
 //## Settings for some of the most global styles.
 
 //** Background color for `<body>`.
-$body-bg:               darken($brand-primary, 20%) !default;
+$body-bg:               darken($brand-primary, 40%) !default;
 
 //** Global text color on `<body>`.
 $text-color:            $brand-primary !default;
@@ -709,8 +709,9 @@ $list-group-link-heading-color: #333 !default;
 //
 //##
 
-$panel-bg:                    darken($brand-primary, 18%) !default;
-$panel-body-padding:          15px 20px !default;
+//$panel-bg:                    darken($brand-primary, 35%) !default;
+$panel-bg:                    $body-bg !default;
+$panel-body-padding:          20px !default;
 $panel-heading-padding:       0px !default;
 $panel-footer-padding:        $panel-heading-padding !default;
 $panel-border-radius:         $border-radius-base !default;
