Made it better.

--- a/station-game/public/app/components/inventory/inventory.html
+++ b/station-game/public/app/components/inventory/inventory.html
@@ -1,5 +1,5 @@
 <div id="inventory" class="box">
-    <h3 class="box-title">Inventory:</h3>
+    <h4 class="box-title">Inventory</h4>
     <div class="box-body">
         <ul>
             <li ng-repeat="item in inventoryCtrl.items">
