--- a/station-game/public/app/components/location/location.html
+++ b/station-game/public/app/components/location/location.html
@@ -3,6 +3,8 @@
 <h2>Structures:</h2>
 <ul>
     <li ng-repeat="structure in locationCtrl.location.structures">
-        <a href ui-sref="structure({ locationId: locationCtrl.location._id, structureId: structure._id })">{{ structure.name }}</a>
+        <a href ui-sref="structure({ locationId: locationCtrl.location._id, structureId: structure._id })">
+            {{ structure.name }} ({{ structure.percentExplored | percentage }})
+        </a>
     </li>
 </ul>
