--- a/station-game/public/app/styles/app.scss
+++ b/station-game/public/app/styles/app.scss
@@ -1,84 +1,10 @@
-body {
-    font-family: sans-serif;
-    font-size: 16px;
-    padding: 40px;
-    line-height: 1.45;
-    background-color: #f2f2f2;
-}
+@import "../../../bower_components/bootstrap-sass/assets/stylesheets/_bootstrap";
 
-a {
-    color: #fff;
-    background-color: #000;
-    padding: 10px 20px;
-    display: inline-block;
-    text-decoration: none;
+.container {
+    max-width: 340px;
 }
-    a:hover,
-    a:focus,
-    a:active {
-        text-decoration: none;
-        color: #fff;
-    }
-    a.disabled {
-        background-color: #f00;
-    }
-    li.muted > a {
-        background-color: #aaa;
-    }
-
-ul {
-    margin: 0;
-    padding: 0;
-    list-style: none;
-}
-    li {
-        margin: 0 0 10px;
-    }
-        li:last-child {
-            margin-bottom: 0;
-        }
-    ul ul {
-        margin-top: 10px;
-        margin-left: 20px;
-    }
-
-.box {
-    border: 1px solid #ddd;
-    margin: 0 0 20px;
-}
-
-.box-title {
-    margin: 0;
-    padding: 10px 20px;
-    border-bottom: 1px solid #ddd;
-    background-color: #f2f2f2;
-    font-size: 16px;
-    font-weight: bold;
-}
-
-.box-body {
-    padding: 20px;
-    background-color: #fff;
-}
-    .box-body > :last-child {
-        margin-bottom: 0;
-    }
-
 .page-header {
-    border: 0;
-    padding: 0;
-    margin: 0 0 20px;
-
-    h1 {
-        margin: 0;
-    }
-
-    .subheading {
-        font-size: 16px;
-        font-weight: bold;
-        color: #888;
-        margin: 0;
-    }
+    text-align: center;
 }
 
 @import "../components/map/map";
