Added Bootswatch theme.

--- a/station-game/public/app/styles/app.scss
+++ b/station-game/public/app/styles/app.scss
@@ -1,4 +1,6 @@
+@import "_bootswatch-cyborg";
 @import "../../../bower_components/bootstrap-sass/assets/stylesheets/_bootstrap";
+@import "_bootswatch";
 
 .container {
     max-width: 340px;
