--- a/station-game/public/app/components/structure/structure.html
+++ b/station-game/public/app/components/structure/structure.html
@@ -3,10 +3,10 @@
         <div id="room">
             <div class="page-header">
                 <div class="panel panel-default panel-body">
-                    <h4>{{ structureCtrl.name }}</h4>
+                    <h4>{{:: structureCtrl.structure.name }}</h4>
                     <div class="text-muted">
-                        <p>{{ structureCtrl.percentExplored | percentage }} explored</p>
-                        <p>{{ structureCtrl.numItems - structureCtrl.numItemsFound }} items remaining</p>
+                        <p>{{ structureCtrl.structure.percentLooted | percentage }} looted</p>
+                        <p>{{ structureCtrl.structure.numItems - structureCtrl.structure.numItemsFound }} items remaining</p>
                     </div>
                 </div>
                 <h1>{{ structureCtrl.room.name }}</h1>
@@ -14,56 +14,46 @@
                 <div ng-if="!structureCtrl.room.isScanned">
                     <p class="lead">???</p>
                     <p>
-                        <a href ng-click="structureCtrl.scanRoom(structureCtrl.room)">Scan Room</a>
+                        <a href class="" ng-click="structureCtrl.scanRoom(structureCtrl.room)">Scan Room</a>
                     </p>
                 </div>
-                <p ng-if="structureCtrl.room.isScanned" class="text-muted">{{ structureCtrl.room.percentExplored | percentage }} explored</p>
             </div>
-            <div class="row" ng-if="structureCtrl.room.isScanned">
-                <div class="col-sm-12">
-                    <div id="doors" class="box">
-                        <h4 class="box-title">Doors</h4>
-                        <div class="box-body">
-                            <ul>
-                                <li ng-repeat="door in structureCtrl.room.doors" data-this-room="{{ thisRoom = structureCtrl.getRoomById(door.roomId) }}" ng-class="{ muted: thisRoom.isVisited }">
-                                    <a ng-if="door.isLocked" class="disabled" href ng-click="structureCtrl.openDoor(door)">
-                                        <i class="fa fa-lock"></i> {{ door.name }}
-                                    </a>
-                                    <a ng-if="!door.isLocked" href ng-click="structureCtrl.openDoor(door)">
-                                        {{ door.name }}
-                                    </a>
+            <ul ng-show="structureCtrl.room.isScanned">
+                <li ng-repeat="door in structureCtrl.room.doors">
+                    <a class="" href ng-click="structureCtrl.openDoor(door)" data-this-room="{{ thisRoom = structureCtrl.findRoomById(door.roomId) }}">
+                        <div ng-show="door.isExit">{{::door.name }}</div>
+                        <div ng-hide="door.isExit">
+                            <div ng-hide="door.entryAttempted || thisRoom.isScanned">Door</div>
+                            <div ng-show="door.entryAttempted || thisRoom.isScanned">
+                                <span ng-show="thisRoom.isScanned">{{::door.name }} ({{:: door.position }})</span>
+                                <span ng-hide="thisRoom.isScanned">Door</span>
+                                <span ng-show="door.isLocked">(Locked)</span>
+                            </div>
+                        </div>
+                    </a>
+                </li>
+                <li ng-repeat="vessel in structureCtrl.room.vessels">
+                    <a class="" href ng-click="structureCtrl.openVessel(vessel)">
+                        {{ vessel.name }} <span ng-show="!vessel.items.length">(Empty)</span>
+                    </a>
+                    <ul ng-show="vessel.isOpen && vessel.items.length">
+                        <li ng-repeat="item in vessel.items">
+                            <a class="" href ng-click="structureCtrl.selectItem(item)">
+                                {{ item.name }}
+                            </a>
+                            <ul class="panel panel-default panel-body" ng-show="item.isSelected">
+                                <li>
+                                    <p>{{ item.description }}</p>
+                                    <a class="" href ng-click="structureCtrl.takeItem(item)">Take</a> <a class="" href ng-click="item.isSelected = false">Cancel</a>
                                 </li>
                             </ul>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-sm-12">
-                    <div ng-if="structureCtrl.room.vessels" id="vessels" class="box">
-                        <h4 class="box-title">Vessels</h4>
-                        <div class="box-body">
-                            <ul ng-if="structureCtrl.room.isScanned">
-                                <li ng-repeat="vessel in structureCtrl.room.vessels" ng-class="{ muted: !vessel.items.length }">
-                                    <a href ng-click="structureCtrl.openVessel(vessel)">
-                                        {{ vessel.name }} <span ng-if="!vessel.items.length">(empty)</span>
-                                    </a>
-                                    <ul ng-if="vessel.isOpen && vessel.items.length">
-                                        <li ng-repeat="item in vessel.items">
-                                            <a href ng-click="structureCtrl.selectItem(item)">
-                                                {{ item.name }}
-                                            </a>
-                                            <div class="panel panel-default panel-body" ng-if="item.isSelected">
-                                                <p>{{ item.description }}</p>
-                                                <a href ng-click="structureCtrl.takeItem(item)">Take</a>&nbsp;|&nbsp;<a href ng-click="item.isSelected = false">Cancel</a>
-                                            </div>
-                                        </li>
-                                        <li><a href ng-click="structureCtrl.takeAllItems(vessel)">(Take all)</a></li>
-                                    </ul>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-            </div>
+                        </li>
+                        <li>
+                            <a class="" href ng-click="structureCtrl.takeAllItems(vessel)">(Take all)</a>
+                        </li>
+                    </ul>
+                </li>
+            </ul>
         </div>
     </div>
 </div>
