--- a/station-game/public/app/components/location/location.html
+++ b/station-game/public/app/components/location/location.html
@@ -1,9 +1,12 @@
-<p><a ui-sref="map">&larr;&nbsp;Back to map</a></p>
-<h1>{{ locationCtrl.location.name }}</h1>
+<h1>{{:: locationCtrl.location.name }}</h1>
+<p class="lead">{{:: locationCtrl.location.description }}</p>
 <ul>
     <li ng-repeat="structure in locationCtrl.location.structures">
         <a href ui-sref="structure({ locationId: locationCtrl.location._id, structureId: structure._id })">
-            {{ structure.name }}
+            {{ structure.name }}...
         </a>
+    </li>
+    <li>
+        <a ui-sref="map">&larr;&nbsp;Map</a>
     </li>
 </ul>
