--- a/station-game/server/views/layouts/main.handlebars
+++ b/station-game/server/views/layouts/main.handlebars
@@ -2,9 +2,11 @@
 <html>
     <head>
         <title>STATION</title>
+        <link href='//fonts.googleapis.com/css?family=Source+Code+Pro:400,900,700,300,200,500,600' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" href="/css/app.min.css">
     </head>
     <body ng-app="{{ module }}">
+        <st-header></st-header>
         <div class="container">
             {{{ body }}}
             <ui-view></ui-view>
